# SNOBOL4python

./: .gitignore  AI Master's Degree.csv  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  inbox-pop3.py  meta-yaml.py  mkdocs.yml  plural-y.py  plural.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
CSCI-513/: CSCI_513_Final_Examination.ipynb  CSCI_513_Project.ipynb  IMDB1.csv  Plotly.ipynb  assignment2.py  assignment3.py  assignment4.ipynb  assignment4.py  assignment5.py  assignment7.ipynb  cars.csv  eliza.sno  fun_with_floats.py  fun_with_loops.py  iris.csv  midterm.py  nba.txt  numpy.ipynb  pandas.ipynb  pandasii.ipynb  pandasii.py  sklearn.ipynb  titanic.csv  titanic2.csv  titanic3.csv
CSCI-549/: CSCI_549_Chapter_2.ipynb  CSCI_549_Chapter_3.ipynb  CSCI_549_Chapter_4.ipynb  CSCI_549_Chapter_5.ipynb  CSCI_549_Problems.ipynb  CSCI_549_Toy_Languages.ipynb
CSCI-573/: CSCI-573 MapReduce-function example.csv  CSCI-573 MapReduce-function specs.csv  CSCI-573 MapReduce-outline.csv  CSCI_573_Mock_MapReduce.ipynb  CSCI_573_Mock_Spark.py  CSCI_573_assignment1.ipynb  CSCI_573_assignment2.ipynb  CSCI_573_assignment3.ipynb  CSCI_573_assignment4.ipynb  assignment2.py
CSCI-574/: Assg-01-Python-with-Numpy.ipynb  Assg-01-assg_tasks.py  Assg-02-Scikit-Learn-statsmodel-solutions.ipynb  Assg-02-Scikit-Learn-statsmodel.ipynb  Assg-02-assg_tasks.py  Assg-02-assg_tasks_solutions.py  Assg-03-Linear-Regression-Gradient-Descent-solutions.ipynb  Assg-03-Linear-Regression-Gradient-Descent.ipynb  Assg-03-assg_tasks.py  Assg-03-assg_tasks_solutions.py  Assg-04-Regression-Learning-Curves-Regularization.ipynb  Assg-04-assg_tasks.py  Assg-05-Support-Vector-Machines.ipynb  Assg-05-assg_tasks.py  Assg-06-Ensemble-Learning.ipynb  Assg-06-assg_tasks.py  Assg-07-KMeans-and-PCA.ipynb  Assg-07-assg_tasks.py  CSCI_574_Chapter_1.ipynb  CSCI_574_Final_Exam.ipynb  CSCI_574_Mid_term_Exam.ipynb
CSCI-576/: CSCI-576 Computer Vision - Articles.csv  CSCI-576 Computer Vision - Criteria.csv  CSCI-576 Computer Vision - Critique.csv  CSCI-576 Computer Vision - Deadlines.csv  CSCI_576_assignment1.ipynb  (+20 more)
(+150 files in other folders)
